BB-7570: Update line item form design - fix align

--- a/src/Oro/Bundle/ProductBundle/Resources/public/blank/scss/components/product-view-quantity.scss
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/blank/scss/components/product-view-quantity.scss
@@ -13,4 +13,8 @@
     &__value {
         width: 25%;
     }
+
+    &__value .input {
+        margin: 0;
+    }
 }
